syntax = "proto3";

package api;

option go_package = "github.com/feliux/commons/api";

message ItemsWithQuantity {
	string ID = 1;
	int32 Quantity = 2;
}

message CreateOrderRequest {
  string customerID = 1;
  repeated ItemsWithQuantity Items = 2;
}

message Item {
	string ID = 1;
	string Name = 2;
	int32 Quantity = 3;
	string PriceID = 4;
}

message CreateOrderResponse {
  string ID = 1;
  string customerID = 2;
  string Status = 3;
  repeated Item Items = 4;
}
